--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -41,6 +41,8 @@ jobs:
           RELEASE_KEY_ALIAS: ${{ secrets.RELEASE_KEY_ALIAS }}
           RELEASE_STORE_PASSWORD: ${{ secrets.RELEASE_STORE_PASSWORD }}
           RELEASE_KEY_PASSWORD: ${{ secrets.RELEASE_KEY_PASSWORD }}
+          GOOOGLE_OAUTH_CLIENT_ID_DEBUG: ${{ secrets.GOOGLE_OAUTH_CLIENT_ID_DEBUG }}
+          GOOOGLE_OAUTH_CLIENT_ID_PRODUCT: ${{ secrets.GOOGLE_OAUTH_CLIENT_ID_PRODUCT }}
         run: |
           echo "BASE_URL=$BASE_URL" >> $GITHUB_WORKSPACE/local.properties
           echo "EMAIL_VERIFICATION_URL=$EMAIL_VERIFICATION_URL" >> $GITHUB_WORKSPACE/local.properties
@@ -54,6 +56,8 @@ jobs:
           echo "RELEASE_KEY_ALIAS=$RELEASE_KEY_ALIAS" >> $GITHUB_WORKSPACE/local.properties
           echo "RELEASE_STORE_PASSWORD=$RELEASE_STORE_PASSWORD" >> $GITHUB_WORKSPACE/local.properties
           echo "RELEASE_KEY_PASSWORD=$RELEASE_KEY_PASSWORD" >> $GITHUB_WORKSPACE/local.properties
+          echo "GOOOGLE_OAUTH_CLIENT_ID_DEBUG=$GOOOGLE_OAUTH_CLIENT_ID_DEBUG" >> $GITHUB_WORKSPACE/local.properties
+          echo "GOOOGLE_OAUTH_CLIENT_ID_PRODUCT=$GOOOGLE_OAUTH_CLIENT_ID_PRODUCT" >> $GITHUB_WORKSPACE/local.properties
 
       - name: Build Release APK
         run: ./gradlew buildRelease
