--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,12 +8,11 @@ versionName = "1.6.3"
 jvmTarget = "17"
 # dependencies versions
 accompanistPermissions = "0.36.0"
-exoplayer = "2.19.1"
 media3Exoplayer = "1.5.1"
 agp = "8.6.1"
-datastorePreferences = "1.1.2"
+datastorePreferences = "1.1.3"
 easyvalidationCore = "1.0.4"
-firebaseBom = "33.9.0"
+firebaseBom = "33.10.0"
 firebaseMessagingKtx = "24.1.0"
 foundation = "1.7.8"
 kotlin = "2.0.21"
@@ -22,14 +21,13 @@ junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.10.0"
+activityCompose = "1.10.1"
 composeBom = "2025.02.00"
 ksp = "2.0.21-1.0.28"
 lottieCompose = "6.4.2-SNAPSHOT"
 materialIconsExtended = "1.7.8"
 pagingRuntimeKtx = "3.3.6"
 pagingCompose = "3.3.6"
-playServicesAuth = "21.3.0"
 revenuecat = "8.11.0"
 roomRuntime = "2.6.1"
 roomCompiler = "2.6.1"
@@ -46,10 +44,6 @@ serialization-core = "1.7.3"
 hilt = "2.51.1"
 hilt-work = "1.2.0"
 hilt-compose = "1.2.0"
-# Ktor
-ktorClientAndroid = "2.3.5"
-ktorClientCore = "3.0.3"
-ktorUtils = "3.0.3"
 # Coil
 coilCompose = "2.7.0"
 # Compose Destinations
@@ -57,14 +51,13 @@ composeDestinations = "2.1.0-beta09"
 composeAnimations = "1.11.6"
 # Worker
 workRuntime = "2.10.0"
-accompanist = "0.34.0"
 jakewhartonTimber = "5.0.1"
 uiTextGoogleFonts = "1.7.8"
 # Retrofit
 retrofit = "2.11.0"
 loggingInterceptor = "4.12.0"
 # PlayServices Ads
-playServicesAds = "23.6.0"
+playServicesAds = "24.0.0"
 googleServices = "4.4.2"
 firebaseCrashlytics = "3.0.3"
 
@@ -75,8 +68,6 @@ androidx-credentials-play-services-auth = { module = "androidx.credentials:crede
 androidx-credentials = { module = "androidx.credentials:credentials", version.ref = "credentials" }
 androidx-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
-androidx-media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3Exoplayer" }
-androidx-media3-exoplayer-dash = { module = "androidx.media3:media3-exoplayer-dash", version.ref = "media3Exoplayer" }
 androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3Exoplayer" }
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
 androidx-paging-runtime-ktx = { module = "androidx.paging:paging-runtime-ktx", version.ref = "pagingRuntimeKtx" }
@@ -86,8 +77,6 @@ androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "
 androidx-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "runtime" }
 compose-charts = { module = "io.github.ehsannarmani:compose-charts", version.ref = "composeCharts" }
 easyvalidation-core = { module = "com.wajahatkarim:easyvalidation-core", version.ref = "easyvalidationCore" }
-exoplayer = { module = "com.google.android.exoplayer:exoplayer", version.ref = "exoplayer" }
-firebase-auth = { module = "com.google.firebase:firebase-auth-ktx" }
 firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
 firebase-messaging-ktx = { module = "com.google.firebase:firebase-messaging-ktx", version.ref = "firebaseMessagingKtx" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
@@ -115,24 +104,18 @@ hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt"
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-compose" }
 hilt-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hilt-work" }
-# Ktor
-ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktorClientAndroid" }
-ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktorClientCore" }
-ktor-utils = { module = "io.ktor:ktor-utils", version.ref = "ktorUtils" }
 # Coil
 coil-kt-coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 # Compose Destinations
 compose-destination-core = { module = "io.github.raamcosta.compose-destinations:core", version.ref = "composeDestinations" }
 compose-destination-animation-core = { module = "io.github.raamcosta.compose-destinations:animations-core", version.ref = "composeAnimations" }
 compose-destination-ksp = { module = "io.github.raamcosta.compose-destinations:ksp", version.ref = "composeDestinations" }
-accompanist-flowlayout = { module = "com.google.accompanist:accompanist-flowlayout", version.ref = "accompanist" }
 # Worker
 androidx-work-runtime = { module = "androidx.work:work-runtime", version.ref = "workRuntime" }
 # Timber
 jakewharton-timber = { module = "com.jakewharton.timber:timber", version.ref = "jakewhartonTimber" }
 androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
 # Retrofit
-play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
@@ -147,11 +130,28 @@ purchases = { module = "com.revenuecat.purchases:purchases", version.ref = "reve
 purchases-ui = { module = "com.revenuecat.purchases:purchases-ui", version.ref = "revenuecat" }
 
 [bundles]
-compose = ["androidx-core-ktx", "androidx-lifecycle-runtime-ktx", "androidx-activity-compose", "androidx-ui", "androidx-ui-graphics", "androidx-ui-tooling-preview", "androidx-material3", "androidx-material-icons-extended"]
-serialization = ["kotlinx-serialization-core", "kotlinx-serialization-json"]
-datastore = ["androidx-datastore-preferences", "androidx-datastore-preferences-core"]
-ktor = ["ktor-client-android", "ktor-client-core", "ktor-utils"]
-retrofit = ["retrofit", "logging-interceptor", "converter-gson"]
+compose = [
+    "androidx-core-ktx",
+    "androidx-lifecycle-runtime-ktx",
+    "androidx-activity-compose",
+    "androidx-ui", "androidx-ui-graphics",
+    "androidx-ui-tooling-preview",
+    "androidx-material3",
+    "androidx-material-icons-extended",
+]
+serialization = [
+    "kotlinx-serialization-core",
+    "kotlinx-serialization-json",
+]
+datastore = [
+    "androidx-datastore-preferences",
+    "androidx-datastore-preferences-core",
+]
+retrofit = [
+    "retrofit",
+    "logging-interceptor",
+    "converter-gson",
+]
 android-testing = ["androidx-junit", "androidx-espresso-core", "androidx-ui-test-junit4"]
 testing = ["junit"]
 debugging = ["androidx-ui-tooling", "androidx-ui-test-manifest"]
