--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,12 +8,12 @@ versionName = "1.6.4"
 jvmTarget = "17"
 # dependencies versions
 accompanistPermissions = "0.36.0"
-media3Exoplayer = "1.5.1"
+media3Exoplayer = "1.6.0"
 agp = "8.6.1"
-datastorePreferences = "1.1.3"
+datastorePreferences = "1.1.4"
 easyvalidationCore = "1.0.4"
-firebaseBom = "33.10.0"
-firebaseMessagingKtx = "24.1.0"
+firebaseBom = "33.12.0"
+firebaseMessagingKtx = "24.1.1"
 foundation = "1.7.8"
 kotlin = "2.0.21"
 coreKtx = "1.15.0"
@@ -22,18 +22,17 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
-composeBom = "2025.02.00"
+composeBom = "2025.03.01"
 ksp = "2.0.21-1.0.28"
 lottieCompose = "6.4.2-SNAPSHOT"
 materialIconsExtended = "1.7.8"
 pagingRuntimeKtx = "3.3.6"
 pagingCompose = "3.3.6"
-revenuecat = "8.11.0"
+revenuecat = "8.15.1"
 roomRuntime = "2.6.1"
 roomCompiler = "2.6.1"
 composeCharts = "0.0.18"
-credentials = "1.3.0"
-credentialsPlayServicesAuth = "1.3.0"
+credentials = "1.5.0"
 googleid = "1.1.1"
 # Serialization
 runtime = "1.7.8"
@@ -57,7 +56,7 @@ uiTextGoogleFonts = "1.7.8"
 retrofit = "2.11.0"
 loggingInterceptor = "4.12.0"
 # PlayServices Ads
-playServicesAds = "24.0.0"
+playServicesAds = "24.1.0"
 googleServices = "4.4.2"
 firebaseCrashlytics = "3.0.3"
 review = "2.0.2"
@@ -65,7 +64,7 @@ review = "2.0.2"
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-androidx-credentials-play-services-auth = { module = "androidx.credentials:credentials-play-services-auth", version.ref = "credentialsPlayServicesAuth" }
+androidx-credentials-play-services-auth = { module = "androidx.credentials:credentials-play-services-auth", version.ref = "credentials" }
 androidx-credentials = { module = "androidx.credentials:credentials", version.ref = "credentials" }
 androidx-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
@@ -82,7 +81,6 @@ firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
 firebase-messaging-ktx = { module = "com.google.firebase:firebase-messaging-ktx", version.ref = "firebaseMessagingKtx" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
-google-firebase-auth = { module = "com.google.firebase:firebase-auth" }
 googleid = { module = "com.google.android.libraries.identity.googleid:googleid", version.ref = "googleid" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
